--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
   },
   "dependencies": {
     "@langchain/anthropic": "^0.3.15",
-    "@langchain/core": "^0.3.42",
+    "@langchain/community": "^0.3.37",
+    "@langchain/core": "^0.3.43",
     "@langchain/openai": "^0.4.5",
     "dotenv": "^16.4.7",
     "langchain": "^0.3.19",
+    "reflect-metadata": "^0.2.2",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.21"
   }
 }
